<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">小后台</string>

    <string name="action_settings">Settings</string>

    <string name="radio_group_1_first">首页</string>
    <string name="radio_group_1_service">服务</string>
    <string name="radio_group_1_mess">消息</string>
    <string name="radio_group_1_my">我的</string>
    <string name="tab_str1">山头讲政策</string>
    <string name="tab_str2">小后台学堂</string>
    <string name="tab_str3">小后台活动</string>
    <string name="phone_num">4008-448-488</string>
    <string name="zhuce_gongsi">注册公司</string>
    <string name="jichang_baoshui">记账报税</string>
    <string name="shebao_fuwu">社保服务</string>
    <string name="fapiao_fuwu">发票服务</string>
    <string name="zhuce_shangbiao">注册商标</string>
    <string name="shenqing_zhuanli">申请专利</string>
    <string name="biaogeng_fuwu">变更服务</string>
    <string name="zhuce_zijin">注册资金</string>
    <string name="zhuxiao_fuwu">注销服务</string>
    <string name="laowu_paiqian">劳务派遣</string>
    <string name="guzhu_baoxian">雇主保险</string>
    <string name="qita_zhengjian">其他证件</string>
    <string name="myCompStr">我的公司</string>
    <string name="mybooklistStr">我的订单</string>
    <string name="lookserviceboardStr">服务看板</string>
    <string name="changhu_admin">账户管理</string>
    <string name="yijian_fankui">意见反馈</string>
    <string name="shoujihao">手机号：</string>
    <string name="zhanghao">账号：</string>
    <string name="mima">密　码：</string>
    <string name="denglu">登 录</string>
    <string name="zhuce_bt_str">注册</string>
    <string name="next_zhuce">确 定</string>
    <string name="yanzheng_word">验证码：</string>
    <string name="get_yanzhen">发送验证码</string>
    <string name="tip_input_pnum">请输入手机号</string>
    <string name="waitting_verification">正在获取验证码...</string>
    <string name="wrong_verification">出错，请重新获取</string>
    <string name="tip_input_password">请输入密码</string>
    <string name="tip_input_yanzheng">请输入验证码</string>
    <string name="zhengzai_zhuce">正在注册...</string>
    <string name="zhengzai_login">正在登录...</string>
    <string name="success_login">登录成功</string>
    <string name="fotget_mm_bt_str">忘记密码？</string>
    <string name="login_changhu">登录账户</string>
    <string name="user_zhuce">用户注册</string>
    <string name="heji">合计： </string>
    <string name="heji_yuan">¥ %1$.2f</string>
    <string name="zong_e_change">¥ %1$d</string>
    <string name="book_yuque">下单预约</string>
    <string name="area_zhuce">注册区域</string>
    <string name="company_name">公司名称</string>
    <string name="company_money_change">新注册资本:</string>
    <string name="new_money_change">请填上新的注册资本总额:</string>
    <string name="company_name_hint_input">请填写新公司名称</string>
    <string name="company_money_change_hint_input">请选择或填写公司名称</string>
    <string name="address_tuoguan_s">地址托管</string>
    <string name="address_tuoguan_ss">¥%1$d元/半年</string>
    <string name="daili_jichang_s">代理记账</string>
    <string name="jichang_zhouqi_s">记账周期</string>
    <string name="radio2">半年</string>
    <string name="radio3">一年</string>
    <string name="radio1">季度</string>
    <string name="radioR1_s">一般纳税人</string>
    <string name="radioR2_s">小规模纳税人</string>
    <string name="tip_input_name">请填写姓名</string>
    <string name="tip_input_c1">请填写备选公司名称1</string>
    <string name="tip_input_c2">请填写备选公司名称2</string>
    <string name="tip_input_c3">请填写备选公司名称3</string>
    <string name="bookjichang_youhui_s">若选择代理记账服务，可优惠%1$d元</string>
    <string name="radio_level_1">不加急</string>
    <string name="radio_level_2">普通加急</string>
    <string name="radio_level_3">特殊加急</string>
    <string name="shifou_jiaji">是否加急</string>
    <string name="area_gongsi">公司区域</string>
    <string name="please_gongsiname">请填写公司名称</string>
    <string name="please_phone">请填写手机号码</string>
    <string name="please_name">请填写姓名</string>
    <string name="dingdanxianqing">订单编号：%1$s</string>
    <string name="dingdanjine">订单金额：¥%1$.2f</string>
    <string name="sel_pay_fs">选择支付方式</string>
    <string name="lijizhifu">立即支付</string>
    <!-- WXPayEntryActivity -->
    <string name="pay_result_tip">这个界面用于显示第三方app通过微信支付的结果</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
    <string name="app_tip">提示</string>

    <string name="jine">金额： </string>
    <string name="goumaiorchexiao">购买/撤销：</string>
    <string name="goumai">购买</string>
    <string name="chexiao">撤销</string>
    <string name="please_idcard_nums">请填写身份证号</string>
    <string name="heji_yuanjiaofen">¥ %1$.2f</string>
    <string name="fp_tab_str1">税局开票申请</string>
    <string name="fp_tab_str2">业务开票</string>
    <string name="fp_tab_str3">发票认证</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment1">Hello blank fragment1</string>
    <string name="hello_blank_fragment2">Hello blank fragment2</string>
    <string name="hello_blank_fragment3">Hello blank fragment3</string>
    <!-- 发票界面 -->
    <string name="jia_fang">开票方</string>
    <string name="jia_c_name">公司名称</string>
    <string name="jia_c_nashuihao">纳税编号</string>
    <string name="jia_c_add">公司地址</string>
    <string name="jia_c_phone">公司电话</string>
    <string name="jia_c_kfh">开户银行</string>
    <string name="jia_c_kfhao">开户账号</string>
    <string name="yi_fang">收票方</string>
    <string name="yi_c_name">公司名称</string>
    <string name="yi_c_nashuihao">纳税编号</string>
    <string name="yi_c_add">公司地址</string>
    <string name="yi_c_phone">公司电话</string>
    <string name="yi_c_kfh">开户银行</string>
    <string name="yi_c_kfhao">开户账号</string>
    <string name="huowu_str">货&#160;&#160;&#160;&#160;&#160;&#160;&#160;物</string>
    <string name="guigexinghao">规格型号</string>
    <string name="danwei_str">单&#160;&#160;&#160;&#160;&#160;&#160;&#160;位</string>
    <string name="shuliang_str">数&#160;&#160;&#160;&#160;&#160;&#160;&#160;量</string>
    <string name="danjia_str">单价(不含税)</string>
    <string name="je_buhanshui_str">金额(不含税)</string>
    <string name="huowu_ms">货物明细：</string>

    <string name="changping">产品介绍</string>
    <string name="banli">办理流程：</string>
    <string name="cailiao">基本材料：</string>
    <string name="zhuyishi">注意事项：</string>

    <!-- 发票-->
    <string name="banli_fapiao_1">1、京华时报讯(记者 潘珊菊)昨天，中国驻美国使馆新闻参赞兼发言人，至此他也成为外交部第30任新：</string>
    <string name="banli_fapiao_2">2、京华时报讯(记者 潘珊菊)昨天，中国驻美国使馆新闻参赞兼发言人，至此他也成为外交部第30任新：</string>
    <string name="cailiao_fapiao_1">1、京华时报讯(记者 潘珊菊)昨天，中国驻美国使馆新闻参赞兼发言人，至此他也成为外交部第30任新：</string>
    <string name="cailiao_fapiao_2">2、京华时报讯(记者 潘珊菊)昨天，中国驻美国使馆新闻参赞兼发言人，至此他也成为外交部第30任新：</string>
    <string name="zhuyi_fapiao_1">1、京华时报讯(记者 潘珊菊)昨天，中国驻美国使馆新闻参赞兼发言人，至此他也成为外交部第30任新：</string>
    <string name="zhuyi_fapiao_2">2、京华时报讯(记者 潘珊菊)昨天，中国驻美国使馆新闻参赞兼发言人，至此他也成为外交部第30任新：</string>


    <!-- 注销公司-->
    <string name="banli_zhuxiao_1">1、京华时报讯(记者 潘珊菊)昨天，中国驻美国使馆新闻参赞兼发言人，至此他也成为外交部第30任新：</string>
    <string name="banli_zhuxiao_2">2、京华时报讯(记者 潘珊菊)昨天，中国驻美国使馆新闻参赞兼发言人，至此他也成为外交部第30任新：</string>
    <string name="cailiao_zhuxiao_1">1、京华时报讯(记者 潘珊菊)昨天，中国驻美国使馆新闻参赞兼发言人，至此他也成为外交部第30任新：</string>
    <string name="cailiao_zhuxiao_2">2、京华时报讯(记者 潘珊菊)昨天，中国驻美国使馆新闻参赞兼发言人，至此他也成为外交部第30任新：</string>
    <string name="zhuyi_zhuxiao_1">1、京华时报讯(记者 潘珊菊)昨天，中国驻美国使馆新闻参赞兼发言人，至此他也成为外交部第30任新：</string>
    <string name="zhuyi_zhuxiao_2">2、京华时报讯(记者 潘珊菊)昨天，中国驻美国使馆新闻参赞兼发言人，至此他也成为外交部第30任新：</string>

 <!-- 注册资金-->
    <string name="banli_zhuce_1">1、京华时报讯(记者 潘珊菊)昨天，中国驻美国使馆新闻参赞兼发言人，至此他也成为外交部第30任新：</string>
    <string name="banli_zhuce_2">2、京华时报讯(记者 潘珊菊)昨天，中国驻美国使馆新闻参赞兼发言人，至此他也成为外交部第30任新：</string>
    <string name="cailiao_zhuce_1">1、京华时报讯(记者 潘珊菊)昨天，中国驻美国使馆新闻参赞兼发言人，至此他也成为外交部第30任新：</string>
    <string name="cailiao_zhuce_2">2、京华时报讯(记者 潘珊菊)昨天，中国驻美国使馆新闻参赞兼发言人，至此他也成为外交部第30任新：</string>
    <string name="zhuyi_zhuce_1">1、京华时报讯(记者 潘珊菊)昨天，中国驻美国使馆新闻参赞兼发言人，至此他也成为外交部第30任新：</string>
    <string name="zhuyi_zhuce_2">2、京华时报讯(记者 潘珊菊)昨天，中国驻美国使馆新闻参赞兼发言人，至此他也成为外交部第30任新：</string>

<!-- 注册商标-->
    <string name="banli_shanbiao_1">1、京华时报讯(记者 潘珊菊)昨天，中国驻美国使馆新闻参赞兼发言人，至此他也成为外交部第30任新：</string>
    <string name="banli_shanbiao_2">2、京华时报讯(记者 潘珊菊)昨天，中国驻美国使馆新闻参赞兼发言人，至此他也成为外交部第30任新：</string>
    <string name="cailiao_shanbiao_1">1、京华时报讯(记者 潘珊菊)昨天，中国驻美国使馆新闻参赞兼发言人，至此他也成为外交部第30任新：</string>
    <string name="cailiao_shanbiao_2">2、京华时报讯(记者 潘珊菊)昨天，中国驻美国使馆新闻参赞兼发言人，至此他也成为外交部第30任新：</string>
    <string name="zhuyi_shanbiao_1">1、京华时报讯(记者 潘珊菊)昨天，中国驻美国使馆新闻参赞兼发言人，至此他也成为外交部第30任新：</string>
    <string name="zhuyi_shanbiao_2">2、京华时报讯(记者 潘珊菊)昨天，中国驻美国使馆新闻参赞兼发言人，至此他也成为外交部第30任新：</string>

    <!-- 注册商标界面 -->
    <string name="str_rpn">联系人姓名</string>
    <string name="str_rpp">联系人电话</string>
    <string name="rm_name">请填写商标名称</string>

    <string name="baocun_str">保存</string>
    <string name="title_activity_server_look_board">ServerLookBoardActivity</string>
    <string name="zhonglei">种类</string>
    <string name="nianfen">年份</string>
    <string name="year_feiyong">本年总费用</string>
    <string name="year_feiyong_two">税额/社保</string>
    <string name="yuefen">月份</string>
    <string name="shebao_fee_str">社保费用</string>
    <string name="shebao_p_num_str">社保人数</string>
    <string name="baoshui_fee_str">报税金额</string>
    <string name="fapiao_fee_str">发票金额</string>
    <string name="kaipiao_fee_str">开票金额</string>
    <string name="jx_fee_str">进项金额</string>

    <!-- MyDialogFragment -->
    <string name="shebao_md">社保名单</string>
    <string name="baoshui_mx">报税明细</string>
</resources>
