<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="16dp">
        <TextView android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_marginLeft="16dp"
            android:text="@string/shoujihao"/>
        <EditText android:id="@+id/phoneEdit"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:maxLength="25"
            android:singleLine="true"
            android:inputType="phone"/>
    </LinearLayout>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="50dp"
        >
        <TextView android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_marginLeft="16dp"
            android:text="@string/mima"/>
        <EditText android:id="@+id/mimaEdit"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:maxLength="25"
            android:singleLine="true"
            android:inputType="numberPassword"/>
    </LinearLayout>
    <Button android:id="@+id/loginBt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/denglu"/>
    <Button android:id="@+id/zhuceBt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zhuce_bt_str"/>
    
    <Button android:id="@+id/fotgetMMBt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fotget_mm_bt_str"/>

</LinearLayout>
