<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/holo_orange_dark" >
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="16dp">
        <TextView android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_marginLeft="16dp"
            android:text="@string/shoujihao"/>
        <EditText android:id="@+id/phoneEdit"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:maxLength="25"
            android:singleLine="true"
            android:inputType="phone"/>
    </LinearLayout>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="50dp"
        >
        <TextView android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_marginLeft="16dp"
            android:text="@string/mima"/>
        <EditText android:id="@+id/mimaEdit"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:maxLength="25"
            android:singleLine="true"
            android:inputType="numberPassword"/>
    </LinearLayout>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="50dp"
        >
        <TextView android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_marginLeft="16dp"
            android:text="@string/yanzheng_word"/>
	    <EditText android:id="@+id/zhuce_yan"
	        android:layout_width="150dp"
	        android:layout_height="40dp"
	        android:maxLength="25"
	        android:singleLine="true"
	        android:inputType="number"/>
	    <Button android:id="@+id/get_yanzhengma"
	        android:layout_width="wrap_content"
        	android:layout_height="match_parent"
        	android:text="@string/get_yanzhen"/>
	</LinearLayout>
    <Button android:id="@+id/nextZhuce"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_zhuce"/>

</LinearLayout>
