<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <ScrollView 
        android:layout_width="match_parent"
    	android:layout_height="0dp"
    	android:layout_weight="1">
        <LinearLayout 
		    android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
	    	android:orientation="vertical">
	    	<LinearLayout 
		    android:layout_width="match_parent"
	    	android:layout_height="60dp"
	    	android:background="@android:color/white">
	    	<TextView android:layout_width="wrap_content"
	    	    android:layout_height="60dp"
	    	    android:text="@string/area_zhuce"
	    	    android:textSize="18sp"
	    	    android:gravity="center"
	    	    android:layout_marginLeft="16dp"/>
	    	<View android:layout_width="0dp"
	    	    android:layout_height="match_parent"
	    	    android:layout_weight="1"/>
	    	<Spinner android:id="@+id/spinner1"
	    	    android:layout_width="wrap_content"
	    	    android:layout_height="40dp"
	    	    android:layout_marginRight="16dp"
	    	    />
	    	</LinearLayout>
	    	<LinearLayout 
			    android:layout_width="match_parent"
		    	android:layout_height="45dp"
				android:layout_marginTop="1dp"
		    	android:background="@android:color/white">
	    	<TextView 
	    	    android:layout_width="wrap_content"
	    	    android:layout_height="wrap_content"
	    	    android:layout_marginLeft="16dp"
	    	    android:textSize="18sp"
	    	    android:text="@string/company_name"/>
	    	<EditText android:id="@+id/cName_et"
	    	    android:layout_width="match_parent"
	    	    android:layout_height="match_parent"
	    	    android:layout_marginLeft="16dp"
	    	    android:hint="@string/company_name_hint_input"
	    	    android:singleLine="true"
	    	    android:maxLength="15"/>
	    	</LinearLayout>
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="45dp"
				android:background="@android:color/white"
				android:gravity="center">
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginLeft="16dp"
					android:textSize="18sp"
					android:text="@string/shifou_jiaji"/>
				<View
					android:layout_width="0dp"
					android:layout_height="match_parent"
					android:layout_weight="1"/>
				<Switch android:id="@+id/tSFJJBtn"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginRight="8dp"
					android:showText="false"
					/>
			</LinearLayout>
	    	<LinearLayout 
			    android:layout_width="match_parent"
		    	android:layout_height="45dp"
		    	android:gravity="center_vertical"
		    	android:background="@android:color/white">
	    	<TextView 
	    	    android:layout_width="wrap_content"
	    	    android:layout_height="wrap_content"
	    	    android:layout_marginLeft="16dp"
	    	    android:textSize="18sp"
	    	    android:text="@string/address_tuoguan_s"/>
	    	<TextView android:id="@+id/shu_add"
		        android:layout_width="wrap_content"
	    		android:layout_height="wrap_content"
	    		android:layout_marginLeft="4dp"
	    		
	    		android:textSize="18sp"
	    		android:textColor="@android:color/holo_red_light"/>
	    	<View 
	    	    android:layout_width="0dp"
	    	    android:layout_height="match_parent"
	    	    android:layout_weight="1"/>
	    	<Switch android:id="@+id/toggleButton1"
	    	    android:layout_width="wrap_content"
	    	    android:layout_height="wrap_content"
	    	    android:layout_marginRight="8dp"
				android:showText="false"/>
	    	</LinearLayout>
	    	<LinearLayout 
			    android:layout_width="match_parent"
		    	android:layout_height="45dp"
		    	android:background="@android:color/white"
				android:gravity="center_vertical">
	    	<TextView 
	    	    android:layout_width="wrap_content"
	    	    android:layout_height="wrap_content"
	    	    android:layout_marginLeft="16dp"
	    	    android:textSize="18sp"
	    	    android:text="@string/daili_jichang_s"/>
	    	<View 
	    	    android:layout_width="0dp"
	    	    android:layout_height="match_parent"
	    	    android:layout_weight="1"/>
	    	<Switch android:id="@+id/toggleButton2"
	    	    android:layout_width="wrap_content"
	    	    android:layout_height="wrap_content"
	    	    android:layout_marginRight="8dp"
				android:showText="false"/>
	    	</LinearLayout>
	    	<LinearLayout 
			    android:layout_width="match_parent"
		    	android:layout_height="45dp"
		    	android:visibility="gone"
		    	android:id="@+id/jiZLL"
		    	android:gravity="center_vertical"
		    	android:background="@android:color/white">
	    		<TextView 
		    	    android:layout_width="wrap_content"
		    	    android:layout_height="wrap_content"
		    	    android:layout_marginLeft="16dp"
		    	    android:textSize="18sp"
		    	    android:text="@string/jichang_zhouqi_s"/>
	    		<RadioGroup
					android:id="@+id/period_jz"
	    		    android:layout_width="wrap_content"
	    		    android:layout_height="wrap_content"
	    		    android:checkedButton="@+id/radio3"
	    		    android:orientation="horizontal"
	    		    android:layout_marginLeft="16dp">
	    		    <RadioButton
			            android:layout_width="wrap_content"
			            android:layout_height="45dp"
			            android:gravity="center"
			            android:text="@string/radio1"
			            android:id="@+id/radio1"
						android:layout_marginLeft="16dp"/>
	    		    <RadioButton
			            android:layout_width="wrap_content"
			            android:layout_height="45dp"
			            android:gravity="center"
			            android:text="@string/radio2"
			            android:id="@+id/radio2"
						android:layout_marginLeft="16dp"/>
			        <RadioButton
			            android:layout_width="wrap_content"
			            android:layout_height="45dp"
			            android:gravity="center"
			            android:text="@string/radio3"
			            android:id="@id/radio3"
						android:layout_marginLeft="16dp"/>
	    		</RadioGroup>
	    	</LinearLayout>
	    	<LinearLayout 
			    android:layout_width="match_parent"
		    	android:layout_height="45dp"
		    	android:background="@android:color/white"
		    	android:visibility="gone"
		    	android:id="@+id/leiNSRLL"
		    	android:gravity="center">
	    		<RadioGroup 
	    		    android:layout_width="wrap_content"
	    		    android:layout_height="wrap_content"
	    		    android:id="@+id/naShuiP"
	    		    android:orientation="horizontal"
	    		    android:layout_marginLeft="16dp"
	    		    android:checkedButton="@+id/radioR2">
	    		    <RadioButton
			            android:layout_width="wrap_content"
			            android:layout_height="45dp"
			            android:gravity="center"
			            android:text="@string/radioR1_s"
			            android:id="@+id/radioR1"
			            />
			        <RadioButton
			            android:layout_width="wrap_content"
			            android:layout_height="45dp"
						android:layout_marginLeft="24dp"
			            android:gravity="center"
			            android:text="@string/radioR2_s"
			            android:id="@id/radioR2"
			            />
	    		</RadioGroup>
	    	</LinearLayout>
	    	<LinearLayout 
			    android:layout_width="match_parent"
		    	android:layout_height="45dp"
		    	android:background="@android:color/white"
		    	android:layout_marginTop="1dp">
	    		<EditText android:id="@+id/book_phone"
	    		    android:layout_width="match_parent"
		    		android:layout_height="45dp"
					android:hint="@string/please_phone"
		    		android:singleLine="true"
		    		android:drawableLeft="@mipmap/phone_sym_img"
		    		android:drawablePadding="4dp"
		    		android:inputType="phone"
					android:maxLength="15"
					android:enabled="false"/>
	    	</LinearLayout>
	    	<LinearLayout 
			    android:layout_width="match_parent"
		    	android:layout_height="45dp"
		    	android:background="@android:color/white">
	    		<EditText android:id="@+id/book_name"
	    		    android:layout_width="match_parent"
		    		android:layout_height="45dp"
		    		android:singleLine="true"
		    		android:drawableLeft="@mipmap/lianxiren"
		    		android:drawablePadding="4dp"
		    		android:hint="@string/please_name"
					android:maxLength="15"/>
	    	</LinearLayout>
	    	<LinearLayout 
			    android:layout_width="match_parent"
		    	android:layout_height="60dp"
		    	android:background="@android:color/white"
		    	android:gravity="center">
	    		<Spinner android:id="@+id/spinner2"
		    	    android:layout_width="wrap_content"
		    	    android:layout_height="45dp"
		    	    android:gravity="center"
		    	    android:background="@drawable/btn_background_circle"/>
	    	</LinearLayout>
	    	<LinearLayout 
			    android:layout_width="match_parent"
		    	android:layout_height="45dp"
		    	android:background="@android:color/white"
		    	android:gravity="center_vertical">
	    		<EditText android:id="@+id/anthor_c1"
	    		    android:layout_width="match_parent"
		    		android:layout_height="45dp"
		    		android:singleLine="true"
		    		android:drawableLeft="@mipmap/comp_n_beixuan"
		    		android:drawablePadding="4dp"
		    		android:hint="@string/tip_input_c1"
					android:maxLength="15"/>
	    	</LinearLayout>
	    	<LinearLayout 
			    android:layout_width="match_parent"
		    	android:layout_height="45dp"
		    	android:background="@android:color/white"
		    	android:gravity="center_vertical">
	    		<EditText android:id="@+id/anthor_c2"
	    		    android:layout_width="match_parent"
		    		android:layout_height="45dp"
		    		android:singleLine="true"
		    		android:drawableLeft="@mipmap/comp_n_beixuan"
		    		android:drawablePadding="4dp"
		    		android:hint="@string/tip_input_c2"
					android:maxLength="15"/>
	    	</LinearLayout>
	    	<LinearLayout 
			    android:layout_width="match_parent"
		    	android:layout_height="45dp"
		    	android:background="@android:color/white"
		    	android:gravity="center_vertical">
	    		<EditText android:id="@+id/anthor_c3"
	    		    android:layout_width="match_parent"
		    		android:layout_height="45dp"
		    		android:singleLine="true"
		    		android:drawableLeft="@mipmap/comp_n_beixuan"
		    		android:drawablePadding="4dp"
		    		android:hint="@string/tip_input_c3"
					android:maxLength="15"/>
	    	</LinearLayout>
	    	<TextView android:id="@+id/tip_word_youhui_book"
	    	    android:layout_width="match_parent"
	    	    android:layout_height="45dp"
	    	    android:gravity="center"
	    	    android:textColor="@android:color/holo_red_light"
	    	    android:textSize="18sp"/>
    	</LinearLayout>
    	
    </ScrollView>
    <View 
        android:layout_width="match_parent"
    	android:layout_height="0.1dp"
    	android:background="@color/colorGray2"
		/>
	<LinearLayout 
	    android:layout_width="match_parent"
    	android:layout_height="45dp"
    	android:background="@android:color/white"
		android:layout_marginTop="1dp">
	    <TextView 
	        android:layout_width="wrap_content"
    		android:layout_height="45dp"
    		android:layout_marginLeft="16dp"
    		android:text="@string/jine"
    		android:textSize="18sp"/>
	    <TextView android:id="@+id/shu_heji"
	        android:layout_width="wrap_content"
    		android:layout_height="45dp"
    		android:layout_marginLeft="4dp"
    		android:textSize="18sp"
    		android:textColor="@android:color/holo_red_light"/>
	    <View android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="1"/>
	    <Button android:id="@+id/bookYuQue"
	        android:layout_width="wrap_content"
	        android:layout_height="44dp"
	        android:layout_marginRight="16dp"
	        android:paddingLeft="16dp"
			android:paddingRight="16dp"
	        android:text="@string/book_yuque"
			android:textColor="@android:color/white"
	        android:background="@drawable/btn_bookyuyue_selector"/>
	</LinearLayout>
</LinearLayout>
