<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.xht.android.companyhelp.SheBaoRActivity">
    <RadioGroup
        android:id="@+id/rg1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:checkedButton="@+id/radioR1">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:gravity="center"
            android:text="@string/goumai"
            android:id="@id/radioR1"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginLeft="24dp"
            android:gravity="center"
            android:text="@string/chexiao"
            android:id="@+id/radioR2"
            />
    </RadioGroup>
    <EditText android:id="@+id/shebaoren_name"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@id/rg1"
        android:singleLine="true"
        android:drawableLeft="@mipmap/xingming_sb"
        android:drawablePadding="4dp"
        android:hint="@string/please_name"
        android:maxLength="15"/>
    <EditText android:id="@+id/shebaoren_idcard"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@id/shebaoren_name"
        android:hint="@string/please_idcard_nums"
        android:singleLine="true"
        android:drawableLeft="@mipmap/sb_pid"
        android:drawablePadding="4dp"
        android:inputType="textVisiblePassword"
        android:maxLength="18"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/shebaoren_idcard"
        android:layout_margin="20dp"
        android:background="@drawable/btn_background_circle"
        android:id="@+id/jian_item_btn"
        android:gravity="center"
        android:textSize="18sp"
        android:text="@string/baocun_str"/>
</RelativeLayout>
