<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RadioGroup
        android:id="@+id/rg1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:checkedButton="@+id/radioR1">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:gravity="center"
            android:text="@string/goumai"
            android:id="@id/radioR1"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginLeft="24dp"
            android:gravity="center"
            android:text="@string/chexiao"
            android:id="@+id/radioR2"
            />
    </RadioGroup>
    <EditText android:id="@+id/shebaoren_name"
        android:layout_width="220dp"
        android:layout_height="45dp"
        android:layout_below="@id/rg1"
        android:singleLine="true"
        android:drawableLeft="@mipmap/phone_sym_img"
        android:drawablePadding="4dp"
        android:hint="@string/please_name"
        android:maxLength="15"/>
    <EditText android:id="@+id/shebaoren_idcard"
        android:layout_width="220dp"
        android:layout_height="45dp"
        android:layout_below="@id/shebaoren_name"
        android:hint="@string/please_idcard_nums"
        android:singleLine="true"
        android:drawableLeft="@mipmap/phone_sym_img"
        android:drawablePadding="4dp"
        android:inputType="phone"
        android:maxLength="25"/>
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:background="@drawable/jianitem_btn_sel"
        android:id="@+id/jian_item_btn"/>

</RelativeLayout>