<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
	<ImageView
		android:layout_width="110dp"
		android:layout_height="34dp"
		android:layout_marginTop="20dp"
		android:layout_gravity="center_horizontal"
		android:background="@mipmap/pic_huanchong"/>
    <LinearLayout
		android:id="@+id/lLayout1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
		android:paddingRight="0dp">
		<TextView android:layout_width="80dp"
			android:layout_height="40dp"
			android:layout_marginLeft="16dp"
			android:textSize="18sp"
			android:text="@string/shoujihao"/>
	    <EditText android:id="@+id/zhuce_phonenum"
	        android:layout_width="match_parent"
	        android:layout_height="40dp"
			android:layout_marginRight="16dp"
	        android:maxLength="25"
	        android:singleLine="true"
	        android:inputType="phone"
			/>
    </LinearLayout>

    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="50dp"
        >
        <TextView android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_marginLeft="16dp"
			android:textSize="18sp"
            android:text="@string/mima"/>
        <EditText android:id="@+id/mimaEdit"
            android:layout_width="match_parent"
            android:layout_height="40dp"
			android:layout_marginRight="16dp"
            android:maxLength="25"
            android:singleLine="true"
            android:inputType="textPassword"/>
    </LinearLayout>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="50dp"
        >
        <TextView android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_marginLeft="16dp"
			android:textSize="18sp"
            android:text="@string/yanzheng_word"/>
	    <EditText android:id="@+id/zhuce_yan"
	        android:layout_width="150dp"
	        android:layout_height="40dp"
	        android:maxLength="25"
	        android:singleLine="true"
	        android:inputType="number"/>
	    <Button android:id="@+id/get_yanzhengma"
	        android:layout_width="110dp"
        	android:layout_height="40dp"
			android:paddingLeft="8dp"
			android:paddingRight="8dp"
			android:background="@drawable/btn_yanm_sel"
        	android:text="@string/get_yanzhen"
			android:textColor="@color/colorBlue"/>
	</LinearLayout>
	<Button android:id="@+id/nextZhuce"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="20dp"
		android:layout_marginRight="20dp"
		android:layout_marginTop="40dp"
		android:gravity="center"
		android:text="@string/next_zhuce"
		android:textColor="@android:color/white"
		android:textSize="20sp"
		android:background="@drawable/btn_background_circle"/>

</LinearLayout>
